# imaging_with_storm_control

./: ,gitignore  create_hal_config_files.ipynb  pyproject.toml
data/input/: boundary_positions.txt
input/: hal-config-mf3-epi.xml
notebooks/: create_hal_config_files.ipynb  create_imaging_positions.ipynb
src/image_acquisition/: hal.py  hal_configs.py.ipynb  imaging_positions.py  shutters.py
src/image_acquisition.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
