[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "image_acquisition"
version = "0.1.0"
description = "functions to prepare and analyze merfish imaging experiments"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Leonardo Sepulveda", email = "leonardosepulveda@gmail.com" }]

[tool.setuptools.packages.find]
where = ["src"]
